My.XXX.APIs/Deployments/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: fcs-xxx
spec:
  selector:
    app: fcs-xxx
  ports:
    - name: http-port
      port: 80
      protocol: TCP
      targetPort: 8080
