My.XXX.APIs/Deployments/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pwc-cn-gts-bs-fcs-netzero-ingress-static
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    #请求大小限制
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    #请求会话粘性
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: balanced
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    # 3 hours
    nginx.ingress.kubernetes.io/session-cookie-expires: "21600"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "21600"

spec:
  rules:
  - host: carboncalculator.asia.pwcinternal.com
    http:
      paths:
      - backend:
          service:
            name: pwc-cn-gts-bs-fcs-netzero-service
            port:
              number: 80
        path: /api(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: pwc-cn-gts-bs-fcs-appnetzero-service
            port:
              number: 80
        path: /()(.*)
        pathType: Prefix
  tls:
  - hosts:
    - carboncalculator.asia.pwcinternal.com
    secretName: net-zero-tls-certificate
